--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ position:sticky;
             </div>
             <div class="header2-social display-right8">
             <ul class="social-icons">
-                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="www.instagram.com"><i class="fa fa-instagram"></i></a></li>
                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                 <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
